--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+OPENWEATHER_API_KEY="9f9605d4011223b0ed851785f6e8337c"
+MUSIC_API_KEY="09b5129b5e932d8e10256d5652aaf3dad73e104a"
